# IoT-Project

./: BLE_PROVISIONING_AND_FIXES.md  DEVICE_REFERENCE.md  FLASHING_GUIDE.md  OTA_FIRMWARE_UPDATE_GUIDE.md  OTA_GUIDE.md  PRE_PRODUCTION_GUIDE.md  QUICKSTART_GUIDE.md  README.md  SECURITY_REVIEW.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  firmware_manifest.json
.agent/skills/git-action/: SKILL.md
.agent/skills/model-advisor/: SKILL.md
IoT_APP_Design/: Implimentation_Prompts.md  IoT_Architecture_Whitepaper.md  IoT_Master_App_Design_Blueprint.md
dsgv_firmware/: CMakeLists.txt  FLASHING_GUIDE.md  Makefile  README.md  partitions_4mb.csv  partitions_8mb.csv  sdkconfig  sdkconfig.defaults
dsgv_firmware/components/dsgv_common/: CMakeLists.txt  Kconfig.projbuild  dsgv_app_main.c  idf_component.yml
dsgv_firmware/components/dsgv_common/config/: dsgv_device_config.c
dsgv_firmware/components/dsgv_common/firebase/: dsgv_firebase.c
dsgv_firmware/components/dsgv_common/gpio/: dsgv_gpio.c
dsgv_firmware/components/dsgv_common/http/: dsgv_captive_portal.c  dsgv_http_server.c
dsgv_firmware/components/dsgv_common/include/: dsgv_captive_portal.h  dsgv_common.h  dsgv_config.h  dsgv_device_config.h  dsgv_device_state.h  dsgv_firebase.h  dsgv_gpio.h  dsgv_mdns.h  dsgv_provisioning.h  wifi_manager.h
dsgv_firmware/components/dsgv_common/mdns/: dsgv_mdns.c
dsgv_firmware/components/dsgv_common/mqtt/: dsgv_mqtt.c
dsgv_firmware/components/dsgv_common/ota/: dsgv_ota.c
dsgv_firmware/components/dsgv_common/provisioning/: dsgv_provisioning.c
dsgv_firmware/components/dsgv_common/wifi/: wifi_manager.c
dsgv_firmware/devices/1gang_switch/: CMakeLists.txt  flash_clean.ps1  sdkconfig.defaults
dsgv_firmware/devices/2gang_switch/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/3gang_switch/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/4gang_switch/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/colour_temp/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/contact_sensor/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/dimmer/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/motion_sensor/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/motion_sensor/main/: CMakeLists.txt  main.c
dsgv_firmware/devices/rgb_light/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/temp_sensor/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/devices/thermostat/: CMakeLists.txt  sdkconfig.defaults
dsgv_firmware/include/: dsgv_config.h  dsgv_device_config.h  dsgv_http_server.h  wifi_manager.h
dsgv_firmware/main/: main.c
dsgv_firmware/main/config/: dsgv_device_config.c
dsgv_firmware/main/gpio/: dsgv_gpio.c
dsgv_firmware/main/matter/: matter_endpoint.c
dsgv_firmware/main/mqtt/: dsgv_mqtt.c
dsgv_firmware/main/wifi/: wifi_manager.c
dsgv_firmware/scripts/: build_all.ps1  build_device.ps1  check_binary_size.py
dsgv_hub_app/: APK_BUILD_GUIDE.md  FIREBASE_SETUP_GUIDE.md  README.md  database.rules.json  pubspec.yaml
dsgv_hub_app/android/: namespace-fix.gradle
dsgv_hub_app/android/app/: build.gradle.kts
dsgv_hub_app/functions/: index.js  package.json
dsgv_hub_app/functions/lib/: oauth.js  smarthome_alexa.js  smarthome_google.js  state_helpers.js
dsgv_hub_app/functions/mqtt_bridge/: bridge.js  package.json
dsgv_hub_app/lib/: main.dart  objectbox-model.json  objectbox.g.dart
dsgv_hub_app/lib/core/: objectbox_store_provider.dart
dsgv_hub_app/lib/data/datasources/: mock_device_datasource.dart  objectbox_device_datasource.dart
dsgv_hub_app/lib/data/models/: device_entity.dart
dsgv_hub_app/lib/data/repositories/: device_repository.dart
dsgv_hub_app/lib/domain/models/: device_schedule.dart  iot_device.dart  matter_device.dart  mqtt_config.dart  room.dart  smart_device.dart
dsgv_hub_app/lib/domain/services/: ble_provisioning_service.dart  device_commissioning_service.dart  device_manager.dart  firebase_config_service.dart  local_http_service.dart  matter_commissioning_service.dart  mdns_discovery_service.dart  mqtt_service.dart  ota_service.dart  room_service.dart  schedule_service.dart  wifi_ap_provisioning_service.dart
dsgv_hub_app/lib/presentation/screens/: ap_provisioning_screen.dart  bulk_wifi_screen.dart  dashboard_screen.dart  device_detail_screen.dart  device_pairing_screen.dart  device_settings_screen.dart  matter_pairing_screen.dart  settings_screen.dart
dsgv_hub_app/lib/presentation/widgets/: app_shell.dart  device_card.dart  schedule_sheet.dart  schema_driven_ui_builder.dart
dsgv_hub_app/test/: widget_test.dart
dsgv_hub_app/test/unit/: iot_device_test.dart  matter_device_test.dart  mqtt_config_test.dart  ota_state_test.dart  smart_device_test.dart
dsgv_hub_app/test/widget/: device_card_test.dart  schema_driven_ui_builder_test.dart
dsgv_hub_app/tools/: gen_icon.py
nexus_firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
nexus_firmware/include/: nexus_config.h  nexus_device_config.h  nexus_device_state.h  nexus_gpio.h  nexus_http_server.h  nexus_provisioning.h
nexus_firmware/main/: main.c
nexus_firmware/main/config/: nexus_device_config.c
nexus_firmware/main/gpio/: nexus_gpio.c
nexus_firmware/main/http/: nexus_http_server.c
nexus_firmware/main/matter/: matter_endpoint.c
nexus_firmware/main/mqtt/: nexus_mqtt.c
nexus_firmware/main/ota/: nexus_ota.c
nexus_firmware/main/provisioning/: nexus_provisioning.c
nexus_firmware/main/wifi/: wifi_manager.c
nexus_hub_app/: APK_BUILD_GUIDE.md  README.md  pubspec.yaml
nexus_hub_app/android/: build.gradle.kts
nexus_hub_app/android/app/: build.gradle.kts
nexus_hub_app/lib/: main.dart  objectbox-model.json  objectbox.g.dart
nexus_hub_app/lib/core/: isar_provider.dart  objectbox_store_provider.dart
nexus_hub_app/lib/data/models/: device_entity.dart  (+2 more)
nexus_hub_app/test/: widget_test.dart
nexus_hub_app/test/unit/: matter_device_test.dart  mqtt_config_test.dart  ota_state_test.dart
nexus_hub_app/test/widget/: device_card_test.dart  schema_driven_ui_builder_test.dart
(+24 files in other folders)
